<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TurnQuest Digital</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="logout">Log out</string>
    <string name="sessionExpired">Session Expired. Login to continue</string>
    <string name="copyright">©2020 KenIndia Group. All rights reserved.</string>
    <string name="open_drawer">Drawer Open</string>
    <string name="close_drawer">Drawer Close</string>
    <string name="app_google_play_store_link">"https://play.google.com/store/apps/details?id="</string>
    <string name="app_market_link">"market://details?id="</string>
    <string name="error301">Device setup failed. Error code 301.</string>
    <string name="version">"version"</string>
    <string name="cancel">Cancel</string>
    <string name="resendOtp">Resend OTP</string>
    <string name="otpDescription">Enter the OTP sent via SMS to </string>
    <string name="benefit_limit_title">Enter Benefit Limit</string>
    <string name="benefit_limit">Benefit Limit</string>
    <string name="resendTitle">Resend Code in </string>
    <string name="currency_kenya">KSh</string>
    <string name="perYear">per year</string>
    <string name="amount">Amount</string>
    <string name="quote_validity">This quote is valid until</string>
    <string name="firstInstallmentDesciption">for first installment.</string>
    <string name="fullInstallmentDesciption">for a year.</string>
    <string name="quoteReferenceHeader">Quote reference - </string>
    <string name="inceptionDateHeader">Inception date - </string>
    <string name="renewalDateHeader">Renewal date - </string>
    <string name="expiredDateHeader">Expires on</string>
    <string name="login_description">Enter your mobile number and password to log in.</string>
    <string name="login_description2">An OTP will be sent to this number.</string>
    <string name="login_description3">We will send a one time pin to your number</string>
    <string name="reg_details">Not yet registered?</string>
    <string name="reg_btn">Register Here</string>
    <string name="title_activity_dashboard">Home</string>
    <string name="quote">Quote</string>
    <string name="quotes">Quotes</string>
    <string name="Btn_View_Policy">View policy</string>
    <string name="Btn_View_Quote">View quote</string>
    <string name="Btn_View_claims">Claim details</string>
    <string name="Btn_Get_insured">Get insurance now</string>
    <string name="Btn_Add_insurance">Add insurance</string>
    <string name="Btn_New_Claim">New claim</string>
    <string name="title_activity_policy_details">Policy Details</string>
    <string name="insuranceType">Type of insurance</string>
    <string name="vehiclePlate"> Vehicle registration number </string>
    <string name="vehiclePlateHint">Include the required spacing</string>
    <string name="vehicleModel"> Vehicle make</string>
    <string name="dateStart">Cover start date</string>
    <string name="dateEnd">Cover end date</string>
    <string name="optional_extras"> Optional extras</string>
    <string name="headerVehicleDetail">Vehicle details</string>
    <string name="headerVehicleValue"> Value of the vehicle</string>
    <string name="headerYearOfManufacture"> Year of manufacturer</string>
    <string name="headerCoverDetails">Cover details</string>
    <string name="titleTopInsuranceProducts">Top Insurance Products</string>
    <string name="titleOtherInsuranceProducts">Other Insurance Products</string>
    <string name="error_insuranceType"> Select your type of insurance</string>
    <string name="error_vehicleModel">Select your vehicle model</string>
    <string name="error_vehicleRegistration">Enter your vehicle registration number</string>
    <string name="error_select_vehicleRegistration">Select your vehicle registration number</string>
    <string name="error_invalid_vehicleRegistration"> Invalid vehicle registration number</string>
    <string name="error_vehicleYearOfManufacture"> Enter year of manufacture</string>
    <string name="error_vehicleValue"> Enter your vehicle value</string>
    <string name="error_invalid_vehicleValue"> Invalid vehicle value</string>
    <string name="error_invalid_vehicleYearOfManufacture"> Invalid vehicle year of manufacture</string>
    <string name="warning_invalid_vehicleValue"> Vehicle value should be more than KSh 100</string>
    <string name="error_invalid_kraNumber"> Invalid KRA number</string>
    <string name="error_startDate"> Enter insurance start date</string>
    <string name="proceed">Continue</string>
    <string name="proceed_payment"> Continue to Payment</string>
    <string name="renew_policy">Renew policy now</string>
    <string name="ok">OK</string>
    <string name="affirmation">I Agree</string>
    <string name="error_incident_description">Enter your incident description</string>
    <string name="error_request_description">Enter your request description</string>
    <string name="error_request_category">Select a request category</string>
    <string name="error_incident_date">Enter your incident date</string>
    <string name="certificatePickupError">Select a certificate sticker pickup point</string>
    <string name="policyCreationError">Select an option below in order to proceed.</string>
    <string name="payment">Pay now</string>
    <string name="paymentQ">How would you like to pay?</string>
    <string name="paymentProcessingInfo">Please wait while we process your payment request</string>
    <string name="title_activity_pay">pay</string>
    <string name="done">Done</string>
    <string name="mpesaError">The given amount is more than the M-pesa limit of 70,000. Proceed to use card payment option.</string>
    <string name="payment_pending">Pending payment</string>
    <string name="payment_successful">Payment successful</string>
    <string name="payment_info1">Your policy will be confirmed once</string>
    <string name="payment_info1_pt2"> payment is received</string>
    <string name="payment_subtitle_info_part1">A payment notification SMS has been sent to </string>
    <string name="payment_subtitle_info_part2">Follow the instructions below to pay for your order.</string>
    <string name="optpay1">1. Go to \'Safaricom\' menu.</string>
    <string name="optpay2">2. Select \'Mpesa\' .</string>
    <string name="optpay3">3. Select \'Lipa na Mpesa\'</string>
    <string name="optpay4">4. Select \'Pay Bill:\' 504689.</string>
    <string name="optpay5">5. Enter \'Business No:\' 785662.</string>
    <string name="optpay6">6. Enter \'Account No:\' 9872.</string>
    <string name="optpay7">7. Enter \'Amount: </string>
    <string name="optpay8">8. Enter PIN and confirm.</string>
    <string name="navItemHome">Home</string>
    <string name="navItemInsuranceProducts">Insurance Products</string>
    <string name="navItemContactUs">Contact us</string>
    <string name="actions">Actions</string>
    <string name="no_connection">No network connection. Make sure the WiFi or mobile data is turned on, then try again.</string>
    <string name="missing_value">Please enter the missing values</string>
    <string name="missing_insurance_types_value">No Insurance Types where found</string>
    <string name="missing_vehicle_models_value">No Vehicle Models where found</string>
    <string name="empty_screen">An error occurred while \n performing request.</string>
    <string name="empty_claims_screen">You don’t have any claims yet.</string>
    <string name="submitClaim">Submit a claim</string>
    <string name="claimSubmit">Submit claim</string>
    <string name="submitRequest">Submit request</string>
    <string name="please_retry">Please Retry</string>
    <string name="retry">Retry</string>
    <string name="excess">Excess</string>
    <string name="title_activity_quote_details">Quote Details</string>
    <string name="vehicle_insurance_type_dialog">Select your preferred insurance type below :-</string>
    <string name="save_quote">Save quote</string>
    <string name="save">Save</string>
    <string name="buy_insurance">Get this insurance</string>
    <string name="title_activity_vehicle_insurance">Vehicle Insurance</string>
    <string name="title_activity_insurance_quotes">Insurance Quotes</string>
    <string name="Q1_quote_step1">Please add a photo of your</string>
    <string name="Q2_quote_step1">logbook or purchase agreement.</string>
    <string name="Q3_quote_step1">Upload proof of ownership</string>
    <string name="vehicleValuationQ1">Upload your vehicle valuation</string>
    <string name="error_locations">No valuer locations found</string>
    <string name="error_valuers">No valuers found</string>
    <string name="error_branch_region">No branch regions found</string>
    <string name="Q1_quote_step2">Please provide us with your KRA Pin, Identification number and upload a copy of your ID</string>
    <string name="Upload_id_info"> Upload a copy of your ID</string>
    <string name="title_activity_register">Registration</string>
    <string name="customer_surname">Surname</string>
    <string name="customer_first_name">First name</string>
    <string name="customer_mobile_no"> Mobile number</string>
    <string name="customer_mobile_no_hint" tools:ignore="Typos">Hint: 07 xxx xxx </string>
    <string name="customer_email_address">Email Address</string>
    <string name="customer_kra_pin">KRA PIN</string>
    <string name="customer_kra_pin_hint">Hint: A123456789$</string>
    <string name="customer_id_number">ID Number</string>
    <string name="incidentDescriptionDisclaimer">Give a short description of the incident</string>
    <string name="requestDescriptionDisclaimer">Give a short description of the request</string>
    <string name="incidentDate">Incident Date</string>
    <string name="incidentTime">Incident Time</string>
    <string name="add_incident_report_pic">Add a photo of the abstract (Incident report?)</string>
    <string name="add_driving_licence_pic">Add a photo of your drivers licence</string>
    <string name="possessionQ">Are you currently in possession of the vehicle?</string>
    <string name="add_damage_pic">Add a photo of the damage</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="claimsDisclaimer">Ensure all details are correct</string>
    <string name="insurancePolicy"> Insurance policy</string>
    <string name="incidentDescription"> Incident Description</string>
    <string name="incidentDateAndTime"> Incident date &amp; time</string>
    <string name="autoRepairCentre">Auto Repair Centre</string>
    <string name="picsOfDamage">Photos of the damage</string>
    <string name="submitClaimsDisclaimer">All information submitted in this claim is accurate and complete.</string>
    <string name="error_surname">Enter your surname</string>
    <string name="error_first_name">Enter your first name</string>
    <string name="error_mobile_no">Enter your mobile number</string>
    <string name="error_email_address">Enter your email address</string>
    <string name="error_invalid_email_address">Invalid Email Address</string>
    <string name="error_kra_pin">Enter KRA PIN Number</string>
    <string name="error_id">Enter ID Number</string>
    <string name="navItemServiceRequest">Service Requests</string>
    <string name="title_activity_new_request_question">New Request</string>
    <string name="newRequestQ">Is your request associated with a policy?</string>
    <string name="manual_payment_info">Please enter the mpesa code returned from the mpesa success message below.</string>
    <string name="mpesaManualCode">Hint: OF90xxxxxx</string>
    <string name="mpesaCode">Mpesa Code</string>
    <string name="mpesa_number_hint">Hint: Enter the number you used to pay with.</string>
    <string name="customer_password_hint">Enter your password</string>
    <string name="customer_password">Password</string>
    <string name="forgotPassword">Forgot your password?</string>
</resources>