<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.turnkeyafrica.bankassurance.ui.login.LoginActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.turnkeyafrica.bankassurance.ui.login.LoginViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userNumberInputLayout"
            style="@style/turnkeyInput.Style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/scale_16_dim"
            android:layout_marginEnd="@dimen/scale_16_dim"
            android:theme="@style/turnkeyInput.Theme"
            app:errorIconDrawable="@null"
            app:errorTextAppearance="@style/error_appearance"
            app:helperText="@string/customer_mobile_no_hint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.39">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUserNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:hint="@string/customer_mobile_no"
                android:inputType="number"
                android:longClickable="false"
                android:maxLength="10"
                android:paddingTop="@dimen/scale_16_dim"
                android:paddingBottom="@dimen/scale_16_dim"
                android:textColor="@color/colordark"
                android:textColorHint="@color/colordark"
                android:textIsSelectable="false"
                android:textSize="@dimen/scale_16" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/reg_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/reg_details"
            android:textColor="@color/gray"
            android:textSize="@dimen/scale_16"
            app:layout_constraintBottom_toTopOf="@+id/lgn_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userPasswordInputLayout"
            app:layout_constraintVertical_bias="1.0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reg_btn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/scale_8_dim"
            android:layout_marginBottom="8dp"
            android:filterTouchesWhenObscured="true"
            android:onClick="@{() -> viewModel.registerNew()}"
            android:text="@string/reg_btn"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/scale_16"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/lgn_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/reg_details"
            app:layout_constraintTop_toBottomOf="@+id/userNumberInputLayout"
            app:layout_constraintVertical_bias="1.0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/forgotQuestion"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:filterTouchesWhenObscured="true"
            android:onClick="@{() -> viewModel.forgotPassword()}"
            android:text="@string/forgotPassword"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/scale_16"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/reg_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userPasswordInputLayout"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/lgn_btn"
            style="@style/turnkeyButton.Style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/scale_16_dim"
            android:layout_marginLeft="@dimen/scale_16_dim"
            android:layout_marginTop="@dimen/scale_8_dim"
            android:layout_marginEnd="@dimen/scale_16_dim"
            android:layout_marginRight="@dimen/scale_16_dim"
            android:onClick="@{() -> viewModel.LoginClick()}"
            android:filterTouchesWhenObscured="true"
            android:paddingTop="@dimen/scale_15_dim"
            android:paddingBottom="@dimen/scale_15_dim"
            android:text="@string/proceed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userNumberInputLayout"
            app:layout_constraintVertical_bias="0.95" />


        <TextView
            android:id="@+id/login_description2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/scale_8_dim"
            android:layout_marginEnd="@dimen/scale_8_dim"
            android:layout_marginBottom="16dp"
            android:text="@string/login_description2"
            android:textSize="@dimen/scale_14"
            app:layout_constraintBottom_toTopOf="@+id/userNumberInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userNumberInputLayout"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/login_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/scale_8_dim"
            android:layout_marginEnd="@dimen/scale_8_dim"
            android:text="@string/login_description"
            android:textAlignment="center"
            android:textSize="@dimen/scale_14"
            app:layout_constraintBottom_toTopOf="@+id/login_description2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userPasswordInputLayout"
            style="@style/turnkeyInput.Style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:theme="@style/turnkeyInput.Theme"
            app:endIconMode="password_toggle"
            app:errorIconDrawable="@null"
            app:errorTextAppearance="@style/error_appearance"
            app:helperText="@string/customer_password_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userNumberInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:hint="@string/customer_password"
                android:inputType="textPassword"
                android:longClickable="false"
                android:paddingTop="@dimen/scale_16_dim"
                android:paddingBottom="@dimen/scale_16_dim"
                android:textColor="@color/colordark"
                android:textColorHint="@color/colordark"
                android:textIsSelectable="false"
                android:textSize="@dimen/scale_16" />

        </com.google.android.material.textfield.TextInputLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>