<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.turnkeyafrica.bankassurance.ui.newrequest.NewRequestQuestionActivity" >

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.turnkeyafrica.bankassurance.ui.newrequest.NewRequestQuestionViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/newServiceRequestLayoutBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="@dimen/scale_5_dim"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                style="@style/Toolbar"
                android:background="@color/white"
                app:subtitleTextColor="@color/black"
                app:title="@string/title_activity_new_request_question"
                app:titleTextAppearance="@style/Toolbar.TitleText"
                app:titleTextColor="@color/black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_gray" />

        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/newRequestQ"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newServiceRequestLayoutBar" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15"
            app:layout_constraintVertical_bias="0.0">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/scale_90_dim"
                android:layout_marginRight="@dimen/scale_90_dim"
                android:onClick="@{() -> viewModel.selectPolicy()}"
                android:text="@string/Yes"
                android:textSize="@dimen/scale_16"
                app:buttonTint="@color/colorPrimary" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.enterDetails()}"
                android:text="@string/No"
                android:textSize="@dimen/scale_16"
                app:buttonTint="@color/colorPrimary" />
        </RadioGroup>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>